# interview-prep-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: index.html
publish/: index.html
src/: app.py  main.py
src/agents/: __init__.py  base.py  coding_agent.py  gap_analyzer.py  jd_analyzer.py  project_intro_agent.py  qa_generator.py  resource_agent.py  resume_analyzer.py  self_intro_agent.py
src/agents/prompts/: coding_agent.txt  gap_analyzer.txt  jd_analyzer.txt  project_intro_agent.txt  qa_generator.txt  resource_agent.txt  resume_analyzer.txt  self_intro_agent.txt
src/graph/: graph_builder.py  nodes.py  router.py  state.py
src/models/: __init__.py  coding_problem.py  gap_analysis.py  input_schema.py  jd_analysis.py  learning_resource.py  project_intro.py  question_bank.py  resume_analysis.py  self_intro.py
src/parsers/: __init__.py  docx_parser.py  pdf_parser.py
src/report/: __init__.py  renderer.py
src/report/templates/: interview_prep_report.html.j2
src/utils/: cache.py  llm_config.py  logger.py
tests/: test_models.py
tests/fixtures/: sample_jd.txt  sample_resume.txt
